# QtFinance

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  README.md
Class/: CMakeLists.txt  Category.cpp  Category.h  Currencies.cpp  Currencies.h  Expense.cpp  Expense.h  Income.cpp  Income.h
Code/: CMakeLists.txt  Messages.cpp  Messages.h  PeriodTypes.cpp  PeriodTypes.h  SqlFilter.cpp  SqlFilter.h  Style.cpp  Style.h
Database/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h
DatabaseClass/: CMakeLists.txt  CategoryDao.cpp  CategoryDao.h  ExpenseAnalysis.cpp  ExpenseAnalysis.h  ExpenseDao.cpp  ExpenseDao.h  IncomeAnalysis.cpp  IncomeAnalysis.h  IncomeDao.cpp  IncomeDao.h
Dialog/: CMakeLists.txt  CategoryDialog.cpp  CategoryDialog.h  CategoryDialog.ui  DatabaseDialog.cpp  DatabaseDialog.h  DatabaseDialog.ui  ExpenseDialog.cpp  ExpenseDialog.h  ExpenseDialog.ui  IncomeDialog.cpp  IncomeDialog.h  IncomeDialog.ui
Model/: CMakeLists.txt  CategoryModel.cpp  CategoryModel.h  ExpenseModel.cpp  ExpenseModel.h  IncomeModel.cpp  IncomeModel.h
Widget/: CMakeLists.txt  ExpenseWidget.cpp  ExpenseWidget.h  ExpenseWidget.ui  IncomeWidget.cpp  IncomeWidget.h  IncomeWidget.ui  MainWidget.cpp  MainWidget.h  MainWidget.ui  PieChartWidget.cpp  PieChartWidget.h  PieChartWidget.ui
