cmake_minimum_required(VERSION 3.5)

project(QtFinance VERSION 0.1 LANGUAGES CXX)

set(CMAKE_INCLUDE_CURRENT_DIR ON)

set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
find_package(Qt6 REQUIRED COMPONENTS Sql)

set(PROJECT_SOURCES
        main.cpp
        MainWindow.cpp
        MainWindow.h
        MainWindow.ui
        Database/DatabaseManager.h
        Database/DatabaseManager.cpp
        Class/Expense.h
        Class/Expense.cpp
        DatabaseClass/ExpenseDao.h
        DatabaseClass/ExpenseDao.cpp
        Model/ExpenseModel.h
        Model/ExpenseModel.cpp
        Widget/ExpenseWidget.h
        Widget/ExpenseWidget.cpp
        Widget/ExpenseWidget.ui
        Dialog/ExpenseDialog.h
        Dialog/ExpenseDialog.cpp
        Dialog/ExpenseDialog.ui
        DatabaseClass/IncomeDao.h
        DatabaseClass/IncomeDao.cpp
        Class/Income.h
        Class/Income.cpp
        Model/IncomeModel.h
        Model/IncomeModel.cpp
        Dialog/IncomeDialog.h
        Dialog/IncomeDialog.cpp
        Dialog/IncomeDialog.ui
        Widget/IncomeWidget.h
        Widget/IncomeWidget.cpp
        Widget/IncomeWidget.ui
        Code/Messages.h
        Code/Messages.cpp
)

if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
    qt_add_executable(QtFinance
        MANUAL_FINALIZATION
        ${PROJECT_SOURCES}
    )
# Define target properties for Android with Qt 6 as:
#    set_property(TARGET QtFinance APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
else()
    if(ANDROID)
        add_library(QtFinance SHARED
            ${PROJECT_SOURCES}
        )
# Define properties for Android with Qt 5 after find_package() calls as:
#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
    else()
        add_executable(QtFinance
            ${PROJECT_SOURCES}
        )
    endif()
endif()

target_link_libraries(QtFinance PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
target_link_libraries(QtFinance PRIVATE Qt${QT_VERSION_MAJOR}::Sql)
target_link_libraries(QtFinance PRIVATE Qt${QT_VERSION_MAJOR}::Core)

set_target_properties(QtFinance PROPERTIES
    MACOSX_BUNDLE_GUI_IDENTIFIER my.example.com
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

install(TARGETS QtFinance
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR})

if(QT_VERSION_MAJOR EQUAL 6)
    qt_finalize_executable(QtFinance)
endif()
